# lean-lsp-mcp

./: .gitignore  README.md  numina-lean-mcp.sh  pyproject.toml
src/lean_lsp_mcp/: instructions.py  outline_utils.py  server.py
tests/: conftest.py  test_outline.py
tests/helpers/: test_project.py
tests/unit/: test_build_progress.py  test_client_utils.py  test_file_utils.py  test_search_utils.py  test_server.py  test_utils.py  test_windows_encoding.py
