[project]
name = "lean-lsp-mcp"
version = "0.14.1"
description = "Lean Theorem Prover MCP"
authors = [{name="Oliver Dressler", email="hey@oli.show"}]
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "leanclient==0.5.5",
    "mcp[cli]==1.21.2",
    "orjson>=3.11.1",
    "pytest>=8.4.2",
    "requests>=2.32.5",
    "google-generativeai>=0.8.0",
    "ipykernel>=7.1.0",
    "google>=3.0.0",
    "google-genai>=1.52.0",
]

[project.urls]
Repository = "https://github.com/oOo0oOo/lean-lsp-mcp"

[project.optional-dependencies]
lint = [
    "ruff>=0.2.0",
]
dev = [
    "ruff>=0.2.0",
    "pytest>=8.3",
    "anyio>=4.4",
    "pytest-asyncio>=0.23",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.setuptools]
packages = ["lean_lsp_mcp"]
package-dir = {"" = "src"}

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.scripts]
lean-lsp-mcp = "lean_lsp_mcp:main"
